# certified-memory-governance-layer

./: .gitattributes  .gitignore  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  DEPENDENCIES.md  LICENSE  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  pyproject.toml
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  codeql.yml  dependency-review.yml  live-adapters.yml  publish.yml  security.yml
docs/: adapters.md  api-stability.md  architecture.md  backend-semantics.md  current-view.md  formal-invariants.md  live-ci.md  operations.md  proof-obligations.md  reference-mapping.md  release-v1.1.0-checklist.md  release-v1.1.2-checklist.md  schemas.md  security-github-publication-checklist.md  threat-model.md
docs/releases/: v1.1.0.md  v1.1.1.md  v1.1.2.md
examples/: basic_inmemory_demo.py  governance_layer_demo.py  langgraph_mem0_pseudoadapter.md  ledger_receipt_demo.py  stale_preference_demo.py  strict_authority_demo.py
examples/conformance/: README.md  admission.certified_user_claim.valid.json  admission.model_inference_fact.invalid.json  admission.summary_as_fact.invalid.json  authority.missing.invalid.json  authority.scope_mismatch.invalid.json  authority_bundle.valid.json  compression.summary_not_fact.valid.json  graphiti_temporal_supersession.valid.json  ledger.valid.jsonl  mem0_add_only_correction.valid.json  memory_event.valid.json  retrieval.superseded_block.valid.json  simple_ledger.nonconformant.jsonl  strict_ledger.valid.jsonl  telemetry_replay.valid.jsonl
scripts/: check_publishability.py  live_adapter_smoke.py
src/cmgl/: __init__.py  __main__.py  absence.py  admission.py  audit.py  authority.py  canonical.py  challenge.py  checker.py  cli.py  compression.py  config.py  conformance.py  current.py  digest.py  doctor.py  evidence.py  exceptions.py  guarded.py  layer.py  ledger.py  ledger_signing.py  lifecycle.py  live_smoke.py  models.py  obligations.py  pipeline.py  policy.py  receipt_verifier.py  rules.py  schemas.py  stable_api.py  state.py  stress.py  telemetry.py  telemetry_ingest.py  telemetry_replay.py  time.py  transitions.py  validation.py  (+1 more)
src/cmgl/adapters/: __init__.py  binding.py  common.py  graphiti.py  langgraph.py  langmem.py  mem0.py
tests/: test_adapters.py  test_admission.py  test_authority.py  test_canonical_digest.py  test_cli.py  test_compression.py  test_conformance_fixtures.py  test_formal_invariants.py  test_inmemory_backend.py  test_ledger.py  test_models.py  test_modularity_and_strict_paths.py  test_reference_alignment.py  test_stable_api.py  test_v04_public_api.py  test_v05_integration.py  test_v06_theory_conformance.py  test_v07_obligation_conformance.py  test_v08_public_ready.py  test_v10_release_ready.py
(+38 files in other folders)
